bk_ida/gccida/g2/clear_storage
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3042:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3053:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3054:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3055:5: error: expected ';' after expression
tree v21; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3055:6: error: use of undeclared identifier 'v21'
tree v21; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3056:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3057:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3059:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3060:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3061:5: error: expected ';' after expression
tree v27; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3061:6: error: use of undeclared identifier 'v27'
tree v27; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3062:5: error: expected ';' after expression
tree v28; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3062:6: error: use of undeclared identifier 'v28'
tree v28; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3068:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3069:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3070:5: error: expected ';' after expression
tree v37; // rdi 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3070:6: error: use of undeclared identifier 'v37'
tree v37; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3078:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)object[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/expr.c:3085:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)*( ( unsigned __int8 *)object + 2)); 
                                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/clear_storage/src/obj/expr.o] Error 1
